cabal-version:      3.4
name:               pipeforge
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Markus Hauck
maintainer:         markus1189@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

executable pipeforge
    ghc-options:      -threaded -Wall -Werror
    import:           fatal-warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.0
                    , Hclip
                    , brick
                    , bytestring
                    , filepath
                    , microlens
                    , microlens-mtl
                    , microlens-th
                    , optparse-applicative
                    , process
                    , text
                    , text-zipper
                    , unix
                    , vty >= 6.0
                    , vty-unix
    hs-source-dirs:   app
    default-language: Haskell2010
